1998-11-26  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-entry.c (show_icon_selection): Fixed spacing.

	* gnome-file-entry.c (gnome_file_entry_get_full_path): Fixed spacing.

1998-11-26  Jeff Garzik  <jgarzik@pobox.com>

	* gnome-dialog-util.[ch]: new, more generic function
	  gnome_request_dialog().
	  
	  This replaces the now-deprecated
	  gnome_request_string_dialog(),
	  gnome_request_string_dialog_parented(),
	  gnome_request_password_dialog(), and
	  gnome_request_password_dialog_parent().

1998-11-26  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi-session.c: make it respect latest changes to GnomeMDI.

1998-11-26  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi-generic-child.[ch]: new object to allow simple
	use of GnomeMDI without subclassing GnomeMDIChild.
	* gnome-mdi-child.h (struct _GnomeMDIChildClass): converted
	signals to "virtual" functions. they made no sense as signals
	since all of them return allocated memory.
	(gnome_mdi_child_new): removed. GnomeMDIChild is now an abstract
	class.
	* gnome-mdi-child.c (gnome_mdi_child_new): removed 
	(gnome_mdi_child_class_init): removed all signals, simply
	set proper default values for "virtual" function pointers instead.
	* gnome-mdi.[ch]: converted create_menus and create_toolbar from
	signals to ordinary function members of GnomeMDI: now you have
	to set them with gnome_mdi_set_[tool|menu]bar_creator() functions
	instead of connecting handlers with gtk_signal_connect(). this will
	probably _BREAK_ each and every app using GnomeMDI. sorry! ;)
	(gnome_mdi_set_menu_template): is now gnome_mdi_set_menubar_template()
	* gnome-mdi.c (set_page_by_widget): check page != NULL instead of
	page_num == -1. I know they should be the same, but this somehow
	makes me more confident ;)

Thu Nov 26 02:53:44 1998  George Lebl  <jirka@5z.com>

	* gnome-{file,icon,pixmap}-entry.c: use the new g_file_test
	  function instead of custom ones, reduces codesize by 44 lines
	  yay! :)
